@@ -1,19 +1,18 @@
 package ru.job4j.departments;
 
-import org.hamcrest.core.Is;
 import org.junit.Test;
 
-import java.util.Arrays;
 import java.util.List;
 
+import static org.hamcrest.core.Is.*;
 import static org.junit.Assert.*;
 
 public class CodeSorterTest {
 
     @Test
-    public void whenSortAscendingUpToThreeLevelsThanSuccessAndSuperCodesAdded() {
+    public void whenSortAscendingUpToThreeLevelsThenSuccessAndSuperCodesAdded() {
         CodeSorter sorter = new CodeSorter();
-        List<String> codes = Arrays.asList(
+        List<String> codes = List.of(
                 "K1\\SK1",
                 "K1\\SK2",
                 "K1\\SK1\\SSK1",
@@ -23,7 +22,7 @@ public class CodeSorterTest {
                 "K2\\SK1\\SSK2"
         );
         List<String> sorted = sorter.sortAscending(codes);
-        List<String> expected = Arrays.asList(
+        List<String> expected = List.of(
                 "K1",
                 "K1\\SK1",
                 "K1\\SK1\\SSK1",
@@ -34,13 +33,13 @@ public class CodeSorterTest {
                 "K2\\SK1\\SSK1",
                 "K2\\SK1\\SSK2"
         );
-        assertThat(sorted, Is.is(expected));
+        assertThat(sorted, is(expected));
     }
 
     @Test
     public void whenSortDescendingUpToThreeLevelsThenSuccessAndSuperCodesAdded() {
         CodeSorter sorter = new CodeSorter();
-        List<String> codes = Arrays.asList(
+        List<String> codes = List.of(
                 "K1\\SK1",
                 "K1\\SK2",
                 "K1\\SK1\\SSK1",
@@ -50,7 +49,7 @@ public class CodeSorterTest {
                 "K2\\SK1\\SSK2"
         );
         List<String> sorted = sorter.sortDescending(codes);
-        List<String> expected = Arrays.asList(
+        List<String> expected = List.of(
                 "K2",
                 "K2\\SK1",
                 "K2\\SK1\\SSK2",
@@ -61,6 +60,6 @@ public class CodeSorterTest {
                 "K1\\SK1\\SSK2",
                 "K1\\SK1\\SSK1"
         );
-        assertThat(sorted, Is.is(expected));
+        assertThat(sorted, is(expected));
     }
 }
